--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="profile">
             <img class="profile-pic" src="images\EvelinTaht.png" alt="Evelin-Taht-img">
             <h2>Hello.</h2>
-            <p>I'm a self-published author with experience in website creation and a certified peer counselor. I have over twenty years of experience working in biotechnology laboratories. 
+            <p>I'm a self-published author with experience in website creation and a certified peer counselor. I have over thirteen years of experience working in biotechnology laboratories. 
                 I'm hardworking and keen on acquiring new knowledge and skills. A firm believer that there is always a way to accomplish something you want.
             </p>
         </div>
